# jp-postal-code

./: .editorconfig  .env.sample  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  docker-compose.yml  justfile
.github/workflows/: build.yml  docker.yml  release.yml
.sqlx/: query-04b01cd2819fd27885b246438543aa4c47efc32e17e4903c9406d66a0754b4a1.json  query-7db823ea25621ad0b6f97484366e5c7b505ad3e5de251a744f9077dc4500b517.json  query-afe498a558e11ed8eccc8d56078a943ec07bdd65aad14b4a144ba5d0a3a83d83.json  query-b6991f8e5fa367ccfe1cd69000b1ec9b6d9affcc124c7a7ae237459685a3fb18.json  query-baa2e0e081b2e037669c17c901cd987f5656252ea70553f5f8a05f7b6a2d6181.json  query-cdcbd99a63f54be2cf3417a1809d385ed18aebbcb110ec1e414c9ed1edbc79e3.json  query-ef15b61d93922fea36bc2f3379803e2c3e286ed187e39991f3a8211c4cbe3c9a.json  query-f2f848545c0e6a74ff39472951fb34a3737f5d42e7ceaa6c20fe042a37164d66.json
jp-postal-address/: Cargo.toml
jp-postal-address/src/: lib.rs
jp-postal-address/src/_gen/: jp_postal_code.file_descriptor.binpb  jp_postal_code.v1.rs
jp-postal-code/: Cargo.toml
jp-postal-code-core/: Cargo.toml
jp-postal-code-core/src/: lib.rs  model.rs  normalize.rs
jp-postal-code-core/src/normalize/: town.rs  town_kana.rs  zenkaku.rs
jp-postal-code-core/testdata/: testcase.yml  testcase_kana.yml
jp-postal-code-proto/: Cargo.toml
jp-postal-code-proto/src/: proto.rs
jp-postal-code-proto/src/_gen/: jp_postal_code.v1.tonic.rs
jp-postal-code-update-database/: Cargo.toml
jp-postal-code-update-database/src/: main.rs
jp-postal-code-util/: Cargo.toml
jp-postal-code-util/src/: download.rs  lib.rs  parse.rs
jp-postal-code-util/src/snapshots/: jp_postal_code_util__parse__tests__parse_utf_ken_all_csv.snap
jp-postal-code-util/testdata/: partial_utf_ken_all.csv
jp-postal-code/src/: config.rs  grpc_service.rs  infra.rs  lib.rs  main.rs  reflection.rs  repo.rs  usecase.rs
jp-postal-code/src/infra/: ephemeral.rs  postgres.rs
jp-postal-code/src/infra/snapshots/: jp_postal_code__infra__ephemeral__tests__utf_ken_all_repository_ephemeral_replace-2.snap  jp_postal_code__infra__ephemeral__tests__utf_ken_all_repository_ephemeral_replace.snap  jp_postal_code__infra__ephemeral__tests__utf_ken_all_repository_ephemeral_search-2.snap  jp_postal_code__infra__ephemeral__tests__utf_ken_all_repository_ephemeral_search.snap  jp_postal_code__infra__ephemeral__tests__utf_ken_all_repository_ephemeral_search_page_size_and_page_token-2.snap  jp_postal_code__infra__ephemeral__tests__utf_ken_all_repository_ephemeral_search_page_size_and_page_token.snap  jp_postal_code__infra__postgres__tests__utf_ken_all_repository_postgres_replace-2.snap  jp_postal_code__infra__postgres__tests__utf_ken_all_repository_postgres_replace.snap  jp_postal_code__infra__postgres__tests__utf_ken_all_repository_postgres_search-2.snap  jp_postal_code__infra__postgres__tests__utf_ken_all_repository_postgres_search.snap  jp_postal_code__infra__postgres__tests__utf_ken_all_repository_postgres_search_page_size_and_page_token-2.snap  jp_postal_code__infra__postgres__tests__utf_ken_all_repository_postgres_search_page_size_and_page_token.snap
jp-postal-code/src/snapshots/: jp_postal_code__usecase__tests__search_postal_code.snap  jp_postal_code__usecase__tests__update_utf_ken_all_database.snap
migrations/: 20250201040853_add_utf_ken_all_table.sql
proto/: buf.gen.yaml  buf.yaml
proto/jp_postal_code/v1/: postal_address.proto  postal_address_service.proto  search_postal_address.proto
tests/runn/: search_empty_postal_code.yml  search_large_page_size.yml  search_multiple_results.yml  search_negative_page_size.yml  search_nonexistent_postal_code.yml  search_postal_address_success.yml
