[workspace]
resolver = "2"
members = ["jp-postal-code-core"]

[workspace.package]
authors = ["At mark, Inc."]
edition = "2021"
license = "MIT"
rust-version = "1.84"
version = "0.0.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
