[package]
name = "jp-postal-code-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
regex = "1.11.1"
serde.workspace = true

[dev-dependencies]
datafile-test = "0.1.0"
itertools = "0.14.0"
pretty_assertions = "1.4.1"
serde_json = "1.0.138"
