[package]
name = "jp-postal-code-update-database"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "jp-postal-code-update-database"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
jp-postal-code = { path = "../jp-postal-code" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }