[package]
name = "jp-postal-code-util"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
futures = "0.3.31"
jp-postal-code-core.workspace = true
reqwest = { version = "0.12.12", features = ["stream"] }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
zip = "2.2.2"
csv = "1.3.1"

[dev-dependencies]
insta = "1.42.1"
mockito = "1.6.1"
tokio = { workspace = true, features = ["full"] }
