[package]
name = "jp-postal-code"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
jp-postal-code-core.workspace = true
jp-postal-code-util.workspace = true
serde.workspace = true
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio"] }
tempfile = "3.16.0"
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing.workspace = true
envy = "0.4.2"
dotenvy = { version = "0.15.7", features = ["cli"] }
thiserror.workspace = true

[dev-dependencies]
insta = "1.42.1"
mockito = "1.6.1"
